--- a/options.html
+++ b/options.html
@@ -12,8 +12,10 @@
 				<th></th>
 			</tr>
 		</table>
-		<button type="submit" id="save">Save</button>
-		<button type="submit" id="add">Add</button>
+		<form>
+		<button type="submit" id="add">➕</button>
+		<button type="submit" id="save">✔️</button>
+		</form>
 		<script src="common.js"></script>
 		<script src="options.js"></script>
 	</body>
