Query->Search Path

--- a/options.html
+++ b/options.html
@@ -8,7 +8,7 @@
 		<table id="sets">
 			<tr id="table_header">
 				<th>Bang</th>
-				<th>Query</th>
+				<th>Search Path</th>
 				<th></th>
 			</tr>
 		</table>
