Fix bug where add button doesn't work

--- a/options.html
+++ b/options.html
@@ -12,10 +12,10 @@
 				<th></th>
 			</tr>
 		</table>
-		<form>
-		<button type="submit" id="add">➕</button>
-		<button type="submit" id="save">✔️</button>
-		</form>
+		<div>
+			<button id="add">➕</button>
+			<button id="save">✔️</button>
+		</div>
 		<script src="common.js"></script>
 		<script src="options.js"></script>
 	</body>
