--- a/options.html
+++ b/options.html
@@ -16,7 +16,7 @@
 			<button id="add">➕</button>
 			<button id="save">✔️</button>
 		</div>
-		<script src="common.js"></script>
+		<script src="lib.js"></script>
 		<script src="options.js"></script>
 	</body>
 </html>
