style options page

--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta lang="en"/>
 		<meta charset="utf-8"/>
+        <link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<table id="sets">
